--- a/src/Pages/Landing/style.css
+++ b/src/Pages/Landing/style.css
@@ -42,12 +42,12 @@ body{
     margin-top: 800px;
 }
 
-.SpaceBig{
+.SpaceMedium{
     margin-top: 600px;
 }
 
-.SpaceMedium{
-    margin-top: 600px;
+.SpaceSmall{
+    margin-top: 200px;
 }
 
 .Motto{
@@ -100,4 +100,110 @@ body{
     .CardSection {
       font-size: 0.9rem;  /* Ajusta el tamaño del texto en pantallas pequeñas */
     }
-  }
+}
+
+.CardTextContainer{
+    width: 25%;
+    height: auto;
+}
+
+.GlobalCardContainer{
+    display: flex;
+    margin-right: 2vh;
+    justify-content: end;
+}
+
+.CardTextTitle{
+    margin-bottom: 3vh;
+    font-size: 35px;
+    font-weight: 600;
+}
+
+.CardTextInfo{
+    margin-top: 1vh;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.CardTextContainer2{
+    width: 25%;
+    height: auto;
+    margin-top: 200px;
+    margin: 3vh;
+}
+
+.MegaTittle{
+    font-weight: 600;
+    text-align: center;
+    font-size: 8vh;
+}
+
+.CardAuthentificationContainer{
+    display: flex;
+    text-align: center ;
+    justify-content: center;
+    gap: 20vh;
+    
+}
+
+.CardAuthentification{
+    width: 30%;
+    height: auto;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid white;
+    border-radius: 40px;
+}
+
+.CardTittle1{
+    font-size: 30px;
+    font-weight: 600;
+    margin: 5vh;
+}
+
+.CardText1{
+    margin: 5vh;
+    font-size: 15px;
+    font-weight: 300;
+    margin: 5vh;
+}
+
+.CardBotton{
+    display: flex;
+    text-decoration: none;
+    color: black;
+    justify-content: center;
+    align-items: center;
+    font-size: 20%;
+    
+}
+
+.CardBottonText{    
+    display: flex;
+    text-align: center;
+    border: 2px solid #F2EDE3;
+    background-color: #F2EDE3;
+    width: fit-content;
+    height: auto;
+    border-radius: 6px;
+    padding-right: 4vh;
+    padding-left: 4vh;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+    margin-bottom: 5vh;
+}
+
+.Footer{
+    display: flex;
+    justify-content: space-between;
+    border: 2px solid rebeccapurple;
+    padding-left: 4vh;
+    padding-right: 4vh;
+}
+
+.FooterSection2{
+    display: flex;
+    gap: 3vh;
+}
+
