--- a/src/Pages/home/style.css
+++ b/src/Pages/home/style.css
@@ -13,7 +13,6 @@ body{
 .Footer{
     display: flex;
     justify-content: space-between;
-    border: 2px solid rebeccapurple;
     padding-left: 4vh;
     padding-right: 4vh;
 }
@@ -24,13 +23,17 @@ body{
 }
 
 .Logo{
-    height: 50vh;
+    height: 7vh;
     width: auto;
+    margin-top: 4vh;
+    margin-left: 19vh;
 }
 
-.header{
-    height: 10vh;
+.Header{
+    height: 1vh;
     width: auto;
+    display: flex;
+    justify-content: space-between;
 }
 
 .SpaceBig{
@@ -45,3 +48,98 @@ body{
     margin-top: 200px;
 }
 
+.Icon{
+    width: 7vh;
+    height: auto;
+}
+
+.NavBarIcons{
+    gap: 5vh;
+    margin-top: 4vh;
+    margin-right: 19vh;
+}
+
+img{
+    width: 3vh;
+    height: auto;
+}
+
+.CardCommentSection{
+    border: 1px solid #FFC7C8;
+    width: 80%;
+    border-radius: 20px;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    padding-right: 5vh;
+    padding-left: 5vh;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+}
+
+.GlobalContainer{
+    display: flex;
+    justify-content: center;
+    
+}
+
+.UserProfile{
+    width: 10vh;
+    height: auto;
+}
+
+.CardHeader{
+    display: flex;
+    align-items: center;
+    gap: 5vh;
+}
+
+.UserName{
+    font-size: 100%;
+    font-weight: 600;
+}
+
+.TextCamp{
+    width: 98%;
+    height: 150px;
+    padding: 10px;
+    resize: none;
+    border: 1px solid #F2EDE3;
+    border-radius: 20px;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    font-size: 14px;
+    background-color: #F2EDE3;
+    outline: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.CardFooter{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.IconMusic{
+    width: 9vh;
+    height: auto;
+}
+
+.Button{
+    display: flex;
+    text-align: center;
+    color: #020202;
+    background-color: #F2EDE3;
+    width: fit-content;
+    height: auto;
+    border-radius: 6px;
+    padding-right: 10vh;
+    padding-left: 10vh;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+    margin-bottom: 5vh;
+}
+
+a{
+    text-decoration: none;
+}
