--- a/src/Pages/Landing/style.css
+++ b/src/Pages/Landing/style.css
@@ -10,6 +10,33 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.CircleSmall{
+    position: absolute;
+    top: -20%;
+    left: 20%;
+    width: 30%;
+    height: auto;
+    z-index: -1;
+}
+
+.CircleMedium{
+    position: absolute;
+    top: 60%;
+    left: -5%;
+    width: 50%;
+    height: auto;
+    z-index: -1;
+}
+
+.CircleBig{
+    position: absolute;
+    top: -2%;
+    left: 40%;
+    width: 60%;
+    height: auto;
+    z-index: -1;
+}
+
 .BackSphere{
     width: 300px;
     height: 300px;
